Fix bad interaction of colspan handling with AddMinCoord's magic to deal with specified coord widths.  Substantive changes by bzbarsky, comments by me.  r+sr=dbaron/bzbarsky  b=363150